--- a/comdoc-api-hub/assets/app/views/misc/contact.tpl.html
+++ b/comdoc-api-hub/assets/app/views/misc/contact.tpl.html
@@ -5,11 +5,11 @@
         <div class="row">
             <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
                 <div class="content-panel-title">
-                    <h2>Say hello</h2>
+                    <h2>파트너 입점신청</h2>
                 </div>
             </div>
             <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
-                <div class="content-panel">Nunc vehicula dapibus ipsum. Duis venenatis risus non nunc fermentum dapibus. Morbi lorem ante, malesuada in mollis nec, non auctor nec massa. Aenean tempus dui eget felis blandit at fringilla urna ultrices. Suspendisse feugiat, ante et viverra lacinia, lectus sem lobortis dui, ultricies consectetur leo mauris at tortor.</div>
+                <div class="content-panel">내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오.</div>
             </div>
         </div>
         <div class="row">
