--- a/comdoc-api-hub/assets/app/views/structure/footer.tpl.html
+++ b/comdoc-api-hub/assets/app/views/structure/footer.tpl.html
@@ -2,30 +2,24 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
-                <h3 class="footer-title">Updates</h3>
-                <div class="update">
-                    <p>Mauris nec ultricies est, non rhoncus lacus. Donec elementum nunc luctus neque auctor, ut hendrerit ligula commodo. Ut vel sollicitudin nulla. In condimentum est eu vulputate dapibus</p>
-                    <p><span>07/05/13</span><span class="pull-right">Admin</span></p>
-                </div>
-                <div class="update">
-                    <p>Donec elementum nunc luctus neque auctor, ut hendrerit ligula commodo. Ut vel sollicitudin nulla. In condimentum est eu vulputate dapibus</p>
-                    <p><span>24/04/13</span><span class="pull-right">Admin</span></p>
+                <h3 class="footer-title">고객센터</h3>
+                <div class="Service Center">
+                    <p>내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오.</p>
+                    <p><span>02-000-0000</span><span class="pull-right">ComDoc사무실</span></p>
                 </div>
             </div>
             <div class="clearfix visible-xs"></div>
             <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
-                <h3 class="footer-title">Testimonials</h3>
-                <div class="testimonals">
-                    <span class="picture"><img ng-src="assets/img/footer/testimonial-1.jpg" alt="" /> Peter Parker</span>
-                    <p><i class="icon-quote-left"></i> Consectetur adipiscing elit. Sed ullamcorper ut lorem eu dapibus. In condimentum massa in dolor adipiscing tincidunt. Fusce mollis augue in libero tristique, a adipiscing felis condimentum. <i class="icon-quote-right"></i></p>
+                <h3 class="footer-title">이용후기</h3>
+                <div class="Review">
+                    <span class="picture"><img ng-src="assets/img/footer/testimonial-1.jpg" alt="" /> 홍길동</span>
+                    <p><i class="icon-quote-left"></i> 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. <i class="icon-quote-right"></i></p>
                     <div class="clearfix"></div>
-                    <span class="picture"><img ng-src="assets/img/footer/testimonial-2.jpg" alt="" /> Joyce Kinney</span>
-                    <p><i class="icon-quote-left"></i> In condi mentum massassa in dolor adipiscing tincidunt. Fusce augue in libero tristique, a adipiscing scing felis condimentum. <i class="icon-quote-right"></i></p>
                 </div>
             </div>
             <div class="clearfix visible-xs"></div>
             <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
-                <h3 class="footer-title">Contact</h3>
+                <h3 class="footer-title">파트너 입점신청</h3>
                 <form class="content-panel">
                     <div class="controls">
                         <input id="name" name="name" type="text" class="input-block-level footer-input" placeholder="Name">
@@ -45,7 +39,7 @@
         <div class="row">
             <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
                 <div class="footer-content">
-                    <p>Nulla congue purus a risus.</p>
+                    <p>민종현, 변동남, 위가혜</p>
                 </div>
             </div>
             <div class="clearfix visible-xs"></div>
@@ -83,7 +77,7 @@
             <div class="clearfix visible-xs"></div>
             <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
                 <div class="footer-content">
-                    <p>&copy; 2015 Jet. All rights reserved</p>
+                    <p>&copy; Copyright ⓒ 2015 ComDoc. All rights reserved.</p>
                 </div>
             </div>
         </div>
