--- a/comdoc-api-hub/views/homepage.ejs
+++ b/comdoc-api-hub/views/homepage.ejs
@@ -4,10 +4,10 @@
     	<base href="http://localhost:1337/">
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />  
-        <title>Sharp Vision v2 + AngularJs</title>
+        <title>믿을 수 있는 컴퓨터수리, ComDoc</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="description" content="A very good theme" />
-        <meta name="author" content="AHthemes" />
+        <meta name="author" content="dongnam" />
         
         <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
