--- a/comdoc-api-hub/assets/app/views/misc/about.tpl.html
+++ b/comdoc-api-hub/assets/app/views/misc/about.tpl.html
@@ -5,48 +5,25 @@
         <div class="row">
             <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
                 <div class="content-panel-title">
-                    <h2>We offer?</h2>
+                    <h2>ComDoc이란?</h2>
                 </div>
             </div>
             <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
                 <div class="content-panel">
-                    <p>Nunc vehicula dapibus ipsum. Duis venenatis risus non nunc fermentum dapibus. Morbi lorem ante, malesuada in mollis nec, non auctor nec massa. Aenean tempus dui eget felis blandit at fringilla urna ultrices. Suspendisse feugiat, ante et viverra lacinia, lectus sem lobortis dui, ultricies consectetur leo mauris at tortor.</p>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-xs-12 col-sm-8 col-md-4 col-lg-4">
-                <div class="content-panel">
-                    <p>Morbi pellentesque libero a metus feugiat tincidunt. Vestibulum in purus lacinia, pharetra odio eget, molestie nunc. Aenean blandit rhoncus felis nec elementum. Integer quis tincidunt quam. Suspendisse blandit, urna ac eleifend facilisis, dolor nunc malesuada quam, id vestibulum arcu urna sit amet ligula. Phasellus nec ultrices enim. Morbi risus magna, suscipit sit amet elementum vitae, laoreet ut lectus. Phasellus blandit elit non leo consequat, in convallis neque molestie.</p>
-                </div>
-            </div>
-            <div class="col-xs-12 hidden-sm col-md-4 col-lg-4">
-                <div class="content-panel">
-                    <p>Nunc ornare elementum tempor. Nunc justo elit, eleifend id mollis sit amet, tincidunt sed diam. Sed nec interdum elit. Sed consequat ipsum ut magna lobortis, rutrum elementum libero imperdiet. Nulla accumsan consectetur varius. Suspendisse accumsan dui vitae semper interdum. Suspendisse sed bibendum turpis, pharetra sollicitudin magna. Ut orci neque, varius id leo eget, ornare varius metus. Duis congue venenatis est, id lobortis diam placerat ac. Quisque vitae orci erat.</p>
-                </div>
-            </div>
-            <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
-                <div class="content-panel">
-                    <flex-slider fslide="item in slider" control-nav="false" direction-nav="false" slideshow-speed="10000">
-					   	 <li>
-                            <img ng-src="{{ item }}" alt="" />
-                        </li>
-					</flex-slider>
+                    <p>ComDoc이란 'Computer Doctor'의 준말로 컴퓨터 출장수리 서비스를 앱서비스와 연계하여, 서비스를 평가하고 견적을 비교하여 결정할 수 있는 양방향 플랫폼 입니다. 신뢰할 수 없으며 비싸고 천차만별인 컴퓨터 수리비, ComDoc에서 먼저 비교하고 지불하세요.</p>
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
                 <div class="content-panel">
-                    <p>Mauris nec ultricies est, non rhoncus lacus. Donec elementum nunc luctus neque auctor, ut hendrerit ligula commodo. Ut vel sollicitudin nulla. In condimentum est eu vulputate dapibus
-                        Mauris nec ultricies est, non rhoncus lacus. Donec elementum nunc luctus neque auctor, ut hendrerit ligula commodo. Ut vel sollicitudin nulla. In condimentum est eu vulputate dapibus.
+                    <p>컴닥 이용 가이드 동영상입니다. 컴닥 이용 가이드 동영상입니다. 컴닥 이용 가이드 동영상입니다. 컴닥 이용 가이드 동영상입니다. 컴닥 이용 가이드 동영상입니다. 컴닥 이용 가이드 동영상입니다. 컴닥 이용 가이드 동영상입니다. 컴닥 이용 가이드 동영상입니다. 컴닥 이용 가이드 동영상입니다. 컴닥 이용 가이드 동영상입니다. 
                     </p>
                 </div>
             </div>
             <div class="col-xs-12 hidden-sm col-md-3 col-lg-3">
                 <div class="content-panel">
-                    <p>Mauris nec ultricies est, non rhoncus lacus. Donec elementum nunc luctus neque auctor, ut hendrerit ligula commodo. Ut vel sollicitudin nulla. In condimentum est eu vulputate dapibus
-                        Mauris nec ultricies est, non rhoncus lacus. Donec elementum nunc luctus neque auctor, ut hendrerit ligula commodo. Ut vel sollicitudin nulla. In condimentum est eu vulputate dapibus.
+                    <p>컴닥 이용 가이드 동영상입니다. 컴닥 이용 가이드 동영상입니다. 컴닥 이용 가이드 동영상입니다. 컴닥 이용 가이드 동영상입니다. 컴닥 이용 가이드 동영상입니다. 컴닥 이용 가이드 동영상입니다. 컴닥 이용 가이드 동영상입니다. 컴닥 이용 가이드 동영상입니다. 컴닥 이용 가이드 동영상입니다. 컴닥 이용 가이드 동영상입니다. 
                     </p>
                 </div>
             </div>
@@ -57,12 +34,12 @@
         <div class="row">
             <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
                 <div class="content-panel-title">
-                    <h2>The team</h2>
+                    <h2>구성원</h2>
                 </div>
             </div>
             <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
                 <div class="content-panel">
-                    <p>Nunc vehicula dapibus ipsum. Duis venenatis risus non nunc fermentum dapibus. Morbi lorem ante, malesuada in mollis nec, auctor nec massa. Aenean tempus dui eget felis blandit at fringilla urna ultrices. Suspendisse feugiat, ante et viverra lacinia, lectus sem lobortis dui, ultricies consectetur leo mauris at tortor.</p>
+                    <p>내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오.</p>
                 </div>
             </div>
         </div>
@@ -75,8 +52,8 @@
                         </div>
                         <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
                             <div class="content-panel" >
-                                <h3>Tyler Durden</h3>
-                                <p>Nunc vehicula dapibus ipsum. Duis venenatis risus non nunc fermentum dapibus. Morbi lorem ante, malesuada in mollis nec, auctor nec massa. Aenean tempus dui eget felis blandit at fringilla urna ultrices. Suspendisse feugiat, ante et viverra lacinia, lectus sem lobortis dui, ultricies consectetur leo mauris at tortor.</p>
+                                <h3>민종현</h3>
+                                <p>내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오.</p>
                             </div>
                             <ul class="team-social social">
                                 <li>
@@ -104,8 +81,8 @@
                         </div>
                         <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
                             <div class="content-panel" >
-                                <h3>Tyler Durden</h3>
-                                <p>Nunc vehicula dapibus ipsum. Duis venenatis risus non nunc fermentum dapibus. Morbi lorem ante, malesuada in mollis nec, auctor nec massa. Aenean tempus dui eget felis blandit at fringilla urna ultrices. Suspendisse feugiat, ante et viverra lacinia, lectus sem lobortis dui, ultricies consectetur leo mauris at tortor.</p>
+                                <h3>변동남</h3>
+                                <p>내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오.</p>
                             </div>
                             <ul class="team-social social">
                                 <li>
@@ -134,37 +111,8 @@
                             </div>
                             <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
                                 <div class="content-panel" >
-                                    <h3>Tyler Durden</h3>
-                                    <p>Nunc vehicula dapibus ipsum. Duis venenatis risus non nunc fermentum dapibus. Morbi lorem ante, malesuada in mollis nec, auctor nec massa. Aenean tempus dui eget felis blandit at fringilla urna ultrices. Suspendisse feugiat, ante et viverra lacinia, lectus sem lobortis dui, ultricies consectetur leo mauris at tortor.</p>
-                                </div>
-                                <ul class="team-social social">
-                                    <li>
-				                        <a href="#" class="social-facebook"></a>
-				                    </li>
-				                    <li>
-				                        <a href="#" class="social-google-plus"></a>
-				                    </li>
-				                    <li>
-				                        <a href="#" class="social-linkedin"></a>
-				                    </li>
-				                    <li>
-				                        <a href="#" class="social-twitter"></a>
-				                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-                    <div class="content-panel">
-                        <div class="row team">
-                            <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
-                                <img class="img-responsive" ng-src="assets/img/about/team.jpg" alt="" />
-                            </div>
-                            <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
-                                <div class="content-panel" >
-                                    <h3>Tyler Durden</h3>
-                                    <p>Nunc vehicula dapibus ipsum. Duis venenatis risus non nunc fermentum dapibus. Morbi lorem ante, malesuada in mollis nec, auctor nec massa. Aenean tempus dui eget felis blandit at fringilla urna ultrices. Suspendisse feugiat, ante et viverra lacinia, lectus sem lobortis dui, ultricies consectetur leo mauris at tortor.</p>
+                                    <h3>위가혜</h3>
+                                    <p>내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오.</p>
                                 </div>
                                 <ul class="team-social social">
                                     <li>
