--- a/comdoc-api-hub/assets/app/views/misc/home.tpl.html
+++ b/comdoc-api-hub/assets/app/views/misc/home.tpl.html
@@ -6,13 +6,13 @@
             <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
                 <div class="content-panel-title">
                     <!-- Content panel title for padding and border -->
-                    <h2>What we do?</h2>
+                    <h2>ComDoc이란?</h2>
                 </div>
             </div>
             <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
                 <div class="content-panel">
                     <!-- Content panel in every span for padding -->
-                    <p>Nunc vehicula dapibus ipsum. Duis venenatis risus non nunc fermentum dapibus. Morbi lorem ante, malesuada in mollis nec, non auctor nec massa. Aenean tempus dui eget felis blandit at fringilla urna ultrices. Suspendisse feugiat, ante et viverra lacinia, lectus sem lobortis dui, ultricies consectetur leo mauris at tortor.</p>
+                    <p>ComDoc이란 'Computer Doctor'의 준말로 컴퓨터 출장수리 서비스를 앱서비스와 연계하여, 서비스를 평가하고 견적을 비교하여 결정할 수 있는 양방향 플랫폼 입니다. 신뢰할 수 없으며 비싸고 천차만별인 컴퓨터 수리비, ComDoc에서 먼저 비교하고 지불하세요.</p>
                 </div>
             </div>
         </div>
@@ -21,21 +21,21 @@
                 <div class="content-panel">
                     <!-- Content panel in every span for padding -->
                     <img class="content-image" ng-src="assets/img/filler/4.jpg" alt="" />
-                    <p>Nunc vehicula dapibus auctor ipsum. Duis venenatis risus non nunc fermentum dapibus. Morbi lorem ante, malesuada in mollis nec, auctor nec massa. Leo mauris at tortor. Nunc et tortor sit amet orci non consequat semper. Nulla non fringilla diam.</p>
+                    <p>1) 스마트폰 컴닥 앱 또는 컴닥 홈페이지에서 컴퓨터 고장이슈를 올리고 원하는 지역을 선택한다.</p>
                 </div>
             </div>
             <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
                 <div class="content-panel">
                     <!-- Content panel in every span for padding -->
                     <img class="content-image" ng-src="assets/img/filler/16.jpg" alt="" />
-                    <p>Proin ut quam eros. Donec sed lobortis diam. Ultrices. Suspendisse feugiat, ante et viverra lacinia, lectus sem lobortis dui, ultricies consectetur leo mauris at tortor. Nunc et tortor sit amet orci consequat semper. Nulla non fringilla diam.</p>
+                    <p>2) 선택한 지역에 있는 컴닥 파트너 업체들로부터 빠른 시간 안에 수리사례별 견적이 도착한다.</p>
                 </div>
             </div>
             <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
                 <div class="content-panel">
                     <!-- Content panel in every span for padding -->
                     <img class="content-image" ng-src="assets/img/filler/17.jpg" alt="" />
-                    <p>Aenean tempus dui eget felis blandit at fringilla urna ultrices. Suspendisse feugiat, ante et viverra lacinia, lectus sem lobortis dui, ultricies consectetur leo mauris at tortor. Nunc et tortor sit amet orci non consequat semper. Nulla non fringilla diam.</p>
+                    <p>3) 마음에 드는 업체를 직접 선택해서 수리를 받는다.</p>
                 </div>
             </div>
         </div>
@@ -43,13 +43,13 @@
             <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
                 <div class="content-panel-title">
                     <!-- Content panel title for padding and border -->
-                    <h2>Our work</h2>
+                    <h2>ComDoc 앱 주요기능</h2>
                 </div>
             </div>
             <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
                 <div class="content-panel">
                     <!-- Content panel in every span for padding -->
-                    <p>Nunc vehicula dapibus ipsum. Duis venenatis risus non nunc fermentum dapibus. Morbi lorem ante, malesuada in mollis nec, auctor nec massa. Aenean tempus dui eget felis blandit at fringilla urna ultrices. Suspendisse feugiat, ante et viverra lacinia, lectus sem lobortis dui, ultricies consectetur leo mauris at tortor.</p>
+                    <p>내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오.</p>
                 </div>
             </div>
         </div>
@@ -59,8 +59,8 @@
                     <!-- Content panel in every span for padding -->
                     <div class="boxgrid" box-grid-effects="slideright">
                         <img class="cover" ng-src="assets/img/filler/11.jpg" alt="" />
-                        <h3>Project</h3>
-                        <p>Aenean tempus dui<br/><a class="soft-hover" ng-href="{{ Root }}/portfolioitem">More Work</a></p>
+                        <h3>기능 1</h3>
+                        <p>내용을 입력하시오.<br/><a class="soft-hover" ng-href="{{ Root }}/portfolioitem">더 보기</a></p>
                     </div>
                 </div>
             </div>
@@ -69,8 +69,8 @@
                     <!-- Content panel in every span for padding -->
                     <div class="boxgrid" box-grid-effects="slideright">
                         <img class="cover" ng-src="assets/img/filler/10.jpg" alt="" />
-                        <h3>Project</h3>
-                        <p>Aenean tempus dui<br/><a class="soft-hover" ng-href="{{ Root }}/portfolioitem">More Work</a></p>
+                        <h3>기능 2</h3>
+                        <p>내용을 입력하시오.<br/><a class="soft-hover" ng-href="{{ Root }}/portfolioitem">더 보기</a></p>
                     </div>
                 </div>
             </div>
@@ -79,8 +79,8 @@
                     <!-- Content panel in every span for padding -->
                     <div class="boxgrid" box-grid-effects="slideright">
                         <img class="cover" ng-src="assets/img/filler/9.jpg" alt="" />
-                        <h3>Project</h3>
-                        <p>Aenean tempus dui<br/><a class="soft-hover" ng-href="{{ Root }}/portfolioitem">More Work</a></p>
+                        <h3>기능 3</h3>
+                        <p>내용을 입력하시오.<br/><a class="soft-hover" ng-href="{{ Root }}/portfolioitem">더 보기</a></p>
                     </div>
                 </div>
             </div>
@@ -91,8 +91,8 @@
                     <!-- Content panel in every span for padding -->
                     <div class="boxgrid" box-grid-effects="slideright">
                         <img class="cover" ng-src="assets/img/filler/8.jpg" alt="" />
-                        <h3>Project</h3>
-                        <p>Aenean tempus dui<br/><a class="soft-hover" ng-href="{{ Root }}/portfolioitem">More Work</a></p>
+                        <h3>기능 4</h3>
+                        <p>내용을 입력하시오.<br/><a class="soft-hover" ng-href="{{ Root }}/portfolioitem">더 보기</a></p>
                     </div>
                 </div>
             </div>
@@ -101,8 +101,8 @@
                     <!-- Content panel in every span for padding -->
                     <div class="boxgrid" box-grid-effects="slideright">
                         <img class="cover" ng-src="assets/img/filler/7.jpg" alt="" />
-                        <h3>Project</h3>
-                        <p>Aenean tempus dui<br/><a class="soft-hover" ng-href="{{ Root }}/portfolioitem">More Work</a></p>
+                        <h3>기능 5</h3>
+                        <p>내용을 입력하시오.<br/><a class="soft-hover" ng-href="{{ Root }}/portfolioitem">더 보기</a></p>
                     </div>
                 </div>
             </div>
@@ -111,8 +111,8 @@
                     <!-- Content panel in every span for padding -->
                     <div class="boxgrid" box-grid-effects="slideright">
                         <img class="cover" ng-src="assets/img/filler/6.jpg" alt="" />
-                        <h3>Project</h3>
-                        <p>Aenean tempus dui<br/><a class="soft-hover" ng-href="{{ Root }}/portfolioitem">More Work</a></p>
+                        <h3>기능 6</h3>
+                        <p>내용을 입력하시오.<br/><a class="soft-hover" ng-href="{{ Root }}/portfolioitem">더 보기</a></p>
                     </div>
                 </div>
             </div>
@@ -121,13 +121,13 @@
             <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
                 <div class="content-panel-title">
                     <!-- Content panel title for padding and border -->
-                    <h2>Clients</h2>
+                    <h2>수리 사례</h2>
                 </div>
             </div>
             <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
                 <div class="content-panel">
                     <!-- Content panel in every span for padding -->
-                    <p>Nunc vehicula dapibus ipsum. Duis venenatis risus non nunc fermentum dapibus. Morbi lorem ante, malesuada in mollis nec, auctor nec massa. Aenean tempus dui eget felis blandit at fringilla urna ultrices. Suspendisse feugiat, ante et viverra lacinia, lectus sem lobortis dui, ultricies consectetur leo mauris at tortor.</p>
+                    <p>내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오.</p>
                 </div>
             </div>
         </div>
