modify signup and signin page

--- a/comdoc-api-hub/assets/app/views/misc/signin.tpl.html
+++ b/comdoc-api-hub/assets/app/views/misc/signin.tpl.html
@@ -10,14 +10,16 @@
             </div>
             <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
                 <div class="content-panel">
-                    <p>Nunc vehicula dapibus ipsum. Duis venenatis risus non nunc fermentum dapibus. Morbi lorem ante, malesuada in mollis nec, non auctor nec massa. Aenean tempus dui eget felis blandit at fringilla urna ultrices. Suspendisse feugiat, ante et viverra lacinia, lectus sem lobortis dui, ultricies consectetur leo mauris at tortor.</p>
+                    <p>내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오. 내용을 입력하시오.</p>
                 </div>
             </div>
         </div>
-        <div class="row">
+        <!-- <div class="row">
             <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
                 <div class="content-panel">
-                    <p>Morbi pellentesque libero a metus feugiat tincidunt. Vestibulum in purus lacinia, pharetra odio eget, molestie nunc. Aenean blandit rhoncus felis nec elementum. Integer quis tincidunt quam. Suspendisse blandit, urna ac eleifend facilisis, dolor nunc malesuada quam, id vestibulum arcu urna sit amet ligula. Phasellus nec ultrices enim. Morbi risus magna, suscipit sit amet elementum vitae, laoreet ut lectus. Phasellus blandit elit non leo consequat, in convallis neque molestie.</p>
+                    <p>
+                        
+                    </p>
                 </div>
             </div>
             <div class="col-xs-12 col-sm-8 col-md-4 col-lg-4">
@@ -47,9 +49,11 @@
             </div>
             <div class="col-xs-12 hidden-sm col-md-4 col-lg-4">
                 <div class="content-panel">
-                    <p>Nunc ornare elementum tempor. Nunc justo elit, eleifend id mollis sit amet, tincidunt sed diam. Sed nec interdum elit. Sed consequat ipsum ut magna lobortis, rutrum elementum libero imperdiet. Nulla accumsan consectetur varius. Suspendisse accumsan dui vitae semper interdum. Suspendisse sed bibendum turpis, pharetra sollicitudin magna. Ut orci neque, varius id leo eget, ornare varius metus. Duis congue venenatis est, id lobortis diam placerat ac. Quisque vitae orci erat.</p>
+                    <p>
+                        
+                    </p>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
 </article>
