--- a/comdoc-api-hub/views/homepage.ejs
+++ b/comdoc-api-hub/views/homepage.ejs
@@ -11,6 +11,7 @@
 	    
 	    <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 	    <link href="assets/css/styles.css" rel="stylesheet">
+      <link href="styles/angular-toastr.css" rel="stylesheet">
     </head>
     <body>
     	<ng-include src="'app/views/structure/navigation.tpl.html'"></ng-include>
@@ -43,5 +44,10 @@
 		<script src="app/app.directives.js"></script>
 		<script src="app/app.routes.js"></script>
 		<script src="app/app.controllers.js"></script>
+
+    <script src="js/dependencies/sails.io.js"></script>
+    <script src="js/dependencies/angular-toastr.js"></script>
+    <script src="js/dependencies/compareTo.module.js"></script>
+    <!--Scripts End-->
     </body>
 </html>
